<resources>
    <string name="app_name">BodyBoost</string>
    <string name="st_sub_title">Nice to meet you, come join our community!
        <br><b>Login</b> if you already have an account</br>
        <br><b>Register</b> to get started with app</br>
</string>
    <string name="st_title">Hello!</string>
    <string name="ill_img">ill_img</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>
    <string name="Login_sub_title">
        <font color="#5A72BB"><b>Login</b></font> if you already have an account.
    </string>
    <string name="login_email">Your email</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>
    <string name="login_havent_account">
        I don\'t have an account <font color="#5A72BB"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="#5A72BB"><b>Register</b></font> to get started with app.
    </string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_password">Your password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_btn">REGISTER</string>
    <string name="register_have_account">
        I already have an account <font color="#5A72BB"><b>Login</b></font>
    </string>
    <string name="home_title">Hello!</string>
    <string name="home_sub_title">Welcom to home</string>
    <string name="water_prof">Water</string>
    <string name="pills_prof">Pills</string>
    <string name="pills_profile">pills</string>
    <string name="food_prof">Food</string>
    <string name="kcal_prof">kcal</string>
    <string name="count_kcal">0</string>
    <string name="sleep_prof">Sleep</string>
    <string name="count_sleep">0</string>
    <string name="hours_prof">hours</string>
    <string name="ml_prof">ml</string>
    <string name="count_water">0</string>
    <string name="count_pills">0</string>
    <string name="pose1">    Step 1:- Start in the push-up position with your arms completely straight and directly beneath your shoulders.\n\n
                             Step 2:- Your body should form a straight line from your shoulders to your ankles. \n\n
                             Step 3:- Squeeze your abs, lift one foot off the floor and bring your knee up towards your chest while keeping your body in as straight of a line as possible. \n\n
                             Step 4:- Return to the starting position and repeat the movement with your opposite leg.. </string>
    <string name="pose2">    Step 1:- Lie flat on your mat with knees bent and feet on the mat. Hands at the base ofyour head and elbows pointed out. Using your abdominals bring your head and shoulders off the mat and come up into a crunch, then lower with control. </string>
    <string name="pose3">    Step 1:- This movement is performed with a bench and a foot stool.\n\n
                             Step 2:- Place a bench behind yourself and rest on it with your hands. Place your legs straight out in front of you. You may also place them at an elevated level as shown above.\n\n
                             Step 3:- Begin with arms in a fully. Slowly bend at your elbows keeping the rest of your body straight. Be sure to keep your elbows back and close together.\n\n
                             Step 4:- Dip down until your arms form a 90 degree angle and you feel a stretch in the triceps.\n\n
                             Step 5:- Slowly extend your arms raising your body back up. Pause and contract your triceps muscles at the top. Pause and repeat the movement.</string>
    <string name="pose4">    Step 1:- Lie flat on the floor with your lower back pressed to the ground (pull your navel in to also target your deep abs). \n\n
                             Step 2:- Put your hands behind your head, then bring your knees in towards your Chest and lift your shoulder blades off the ground, but be sure not to pull on your neck.\n\n
                             Step 3:-Straighten your right leg out to about a 4S-degree angle to the ground while turning your upper body to the left, bringing your right elbow towards the left knee.\n\n
                             Step 4:- Make sure your rib cage is moving and hotjust your elbows. Now switch sides and do the same motion on the other side to complete onerep. </string>
    <string name="pose5">   Step 1:- Lay down with your hands to your sides for support. \n\n
                             Step 2:- Raise your legs so they are off the ground, keeping the abdominals tight.\n\n
                             Step 3:- Slowly raise your legs 90 degrees, contracting the abdominal muscles. Slowly return to starting position. Do not touch the floor with your feet.\n\n
                            </string>
    <string name="pose6">    Step 1:- Lie on your back on an exercise mat. With your arms straight at your sides, bend your knees and place your feet flat on the floor between18 and 24 inches apart.\n\n
                             Step 2:- Breathing out, crunch your ab slightly upward and sideways to the right a couple of inches until your right hand touches your right heel.\n\n
                             Step 3:- Hold brief|y and then return to your starting position while inhaling. Repeat on the left side. </string>
    <string name="pose7">    Step 1:- You can perform straight-leg crunches by lying face up on the floor with your legs straight and then moving your upper body as you would for a standard bent-knee crunch.\n\n
                             Step 2:- Alternatively, lie on your back, raise your legs so they are perpendicular to the floor and then perform the standard crunching motion with your torso.
                             </string>
    <string name="pose8">    Step 1:- Lie down on the floor placing your feet either under something that Will not move or by having a partner hold them. Your legs should be bent at the kneesPlace your hands behind your head and lock them together by claspihg your fingers. This is the starting position.\n\n
                             Step 2:- Elevate your upper body so that it creates an imaginary V-shape with your thighs. Breathe out when performing this part of the exercise.\n\n
                             Step 3:- Once you feel the contraction for a second, lower your upper body back down to the starting position while inhahng. \n\n
                             Step 4:- Repeat for the recommended amount of repetitions.
                            </string>
    <string name="pose9">    Step 1:- Lying on the back,lift stright leg,extend opposite hand to touch toe. \n\n
                             Step 2:- Please,return,alternate inhale down,exhale up at toe touch.
                            </string>
    <string name="pose10">    Step 1:- High Plank position then slowly rotate your torso to the side raising your arm till it gets ihlihe with the other one. \n\n
                             Step 2:- Then return to the initial position.
                            </string>
    <string-array name="title_story">
        <item>Build More Muscle</item>
        <item>Replace Coffee with Matcha Green Tea</item>
        <item> Just Keep Moving</item>
        <item>Stop Counting Calories</item>
        <item> Pick Up a Kettlebell</item>
        <item>Do Yoga</item>
        <item>Get Intense</item>
        <item> Stop Sleeping In</item>
        <item>Make One Meal a Day Vegan</item>
        <item>Go Green</item>
        <item>Enjoy Some Lemon Water</item>
        <item>Set Clear Goals </item>
        <item> Fuel Up Before Your Workout</item>
        <item> And Fuel Up After</item>
        <item>Jump </item>
        <item>Get At Least 7 Hours Sleep</item>
        <item>Get Over the Crunch </item>
        <item>Drop the Wheat</item>
        <item>Change Up Your Workout</item>
        <item>Work Your Abs 3 Days a Week</item>

    </string-array>
    <string name="change_daily_calorie_count">Change daily calorie count</string>
    <string name="apply">Apply</string>
    <string name="daily_calories">Daily calories</string>
    <string name="delete_all_data">Delete all data</string>
</resources>